# Tensorrt-Pytorch-SSD

./: CMakeLists.txt  README.md  count_pig.py  detectnet.cpp  graph_surgeon.py  test_onnx.py
common/: common.h
data/ssd/: config.yaml  labels.txt
include/: munkres.h  utils.h
lib/: gpu_nms.cpp  gpu_nms.hpp  nms_kernel.cu
src/: utils.cpp
